Add new tests.
Signed-off-by: Photon-GitHub <photonde@protonmail.com>